Adicionar pesquisa de salas - BASIS-227321

--- a/frontend/src/app/exames/components/formulario-sala/formulario-sala.component.html
+++ b/frontend/src/app/exames/components/formulario-sala/formulario-sala.component.html
@@ -34,7 +34,7 @@
                         <button pButton type="button" label="Salvar" icon="pi pi-save" [disabled]="!validarFormulario()" (click)="cadastrar()"></button>
                     </div>
                     <div class="p-md-2 p-sm-5">
-                        <button pButton type="button" label="Cancelar" icon="pi pi-times" (click)="limparFormulario()"></button>
+                        <button pButton type="button" label="Limpar" icon="pi pi-times" (click)="limparFormulario()"></button>
                     </div>
                 </div>
             </div>
